# 1.03.82 (44954) Oct 11, 2010
Fixed: Keypresses broken in sliders in the control panel, see #2540
Fixed: Can get a false "stuck" condition by pressing the object to the left against the truck continuously. Object should only be stuck if robot cannot overcome friction force (only applies to refrigerator).
Fixed: "Reset All" does not remove the small play/pause button to the left of graph.
Removed the units label from the right hand side of the chart
Removed the arrow above the time axis
Fixed: If you start the sim and immediately open the FBD, then use FBD to apply a force the sim stays paused. The sim should unpause when you do this, just like if you were dragging the object.
# 1.03.81 (44908) Oct 8, 2010
Fixed: Applied force text field is broken on graph tabs
# 1.03.80 (44767) Oct 6, 2010
Fixed: If the springs are turned on and the wall is closed, the springs are still visible.  
# 1.03.79 (44248) Sep 21, 2010
Fixed: Arrow key press that dismisses the instructions should not also start the object moving in the game modes
Fixed: the play/pause button to the left of the applied force slider should only be shown after the slider is moved or the text box is edited
Added a time axis label underneath the bottom-most visible chart
Fixed: If you show the FBD and uncheck "Force Vectors", the vectors disappear from the FBD. They should still be shown in FBD, just not on object.
Fixed: Switching objects using the combo box should reset the object if it was crashed
Fixed: When the right segment is on the floor (theta=0) and the walls are removed, the segment extends to infinity.  When the user changes the angle, it should shorten again, but instead it remains infinitely long at a nonzero angle.
Fixed: Wall changes location slightly after the ramp is rotated somewhat
Fixed: Object can intersect halfway through wall
Fixed: The object updates when the user is setting the position directly with the position slider